	2009-07-21  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.2 released.

2009-07-03  Jaroslav Hajek  <highegg@gmail.com>

	* pt-eval.cc (do_unwind_protect_cleanup_code): Add missing
	unwind_protect::run.

2009-07-02  Jaroslav Hajek  <highegg@gmail.com>

	* help.cc (do_which): Also look for files.

2009-07-02  Jaroslav Hajek  <highegg@gmail.com>

	* Cell.cc (Cell::index): Use proper resize_fill_value.

2008-07-01  David Bateman  <dbateman@free.fr>
	
	* pr-output.cc (static inline std::string rational_approx (double, 
	int)): Test for underflow of fractional part of rational approximation
	earlier in the loop.

2009-07-01  Joe Rothweiler <octaveuser@sensicomm.com>

	* input.cc (raw_mode): Use TCSADRAIN if no wait.

2009-06-30  Jaroslav Hajek  <highegg@gmail.com>

	* symtab.h (force_variable): Remove assertion.

2009-06-26  John W. Eaton  <jwe@octave.org>

	* load-path.cc (Faddpath): Preserve order of prepended elements.

2009-06-24  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* oct-map.cc (Octave_map::squeeze, Octave_map::permute,
	Octave_map::transpose, Octave_map::reshape, Octave_map::concat,
	Octave_map::index): Add tests for preservation of key order in
	struct arrays.

2009-06-24  Jaroslav Hajek  <highegg@gmail.com>

	* pt-mat.cc (get_concat_class): Use empty string as zero value.
	(tm_row_const_rep::tm_row_const_rep): Initialize class_nm to empty
	string.
	(tm_const::tm_const): Ditto.

2009-06-24  John W. Eaton  <jwe@octave.org>

	* pt-assign.cc (former_built_in_variables): Remove "ans" from the list.

2009-06-24  Jaroslav Hajek  <highegg@gmail.com>

	* pt-eval.cc (do_unwind_protect_cleanup_code):
	Workaround sig_atomic_t != int.

2009-06-23  Jaroslav Hajek  <highegg@gmail.com>

	* quit.h (octave_quit_exception): Delete.
	(exit_status, quitting_gracefully): New globals.
	* quit.cc: Initialize them.
	(Fquit): Set the globals, simulate interrupt.
	(main_loop): Handle exit properly.
	* octave.cc (execute_eval_option_code): Ditto.