@@ -1,3 +1,7 @@
+2009-07-08  John W. Eaton  <jwe@octave.org>
+
+	* pt-assign.cc (maybe_warn_former_built_in_variable): Improve message.
+
 	2009-07-21  Jaroslav Hajek  <highegg@gmail.com>
 
 	Version 3.2.2 released.
